css/style.css
/*!
 * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    overflow-x: hidden;
    background-image: url("../img/bgs/bg_dark.png");
    width: 100%;
    height: 100%;
}


p {
    font-size: 20px;
}

p.small {
    font-size: 16px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
    outline: 0;
    color: #03a9f4;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-transform: uppercase;
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}

hr.star-light,
hr.star-primary {
    margin: 25px auto 30px;
    padding: 0;
    max-width: 250px;
    border: 0;
    border-top: solid 5px;
    text-align: center;
}

hr.star-light:after,
hr.star-primary:after {
    content: "\f005";
    display: inline-block;
    position: relative;
    top: -.8em;
    padding: 0 .25em;
    font-family: FontAwesome;
    font-size: 2em;
}

hr.star-light {
    border-color: #fff;
}

hr.star-light:after {
    color: #fff;
    /*background-color: #03a9f4;*/
}

hr.star-primary {
    border-color: #2c3e50;
}

hr.star-primary:after {
    color: #2c3e50;
    /*background-color: #fff;*/
}

.img-centered {
    margin: 0 auto;
}

.header {
    text-align: center;
    color: #fff;
    background: #332d2d;
    background-image: url(../img/bgs/1.jpg);
    background-position: center center;
    background-size: 100% 100%;;    
    background-repeat: no-repeat;
}

.header .container {
    padding-top: 100px;
    padding-bottom: 50px;

}

.header img {
    display: block;
    margin: 0 auto 20px;
}
@font-face {
  font-family: presa;
  src: url(../fonts/Presa.ttf);
}

.header .intro-text{
    background-image: ;
    background-size: 200px;
    background-repeat: no-repeat;
    background-position: left top;
}

.header .intro-text .name {
    display: block;
    text-transform: uppercase;
    font-family: presa,Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-size: 2em;
    font-weight: 700;
    padding-bottom: 0;
    margin-bottom: 0;
}

.header .intro-text .skills {
    font-size: 1.25em;
    
}

@media(min-width:768px) {
    .header .container {
        padding-top: 150px;
        padding-bottom: 100px;
    }

    .header .intro-text .name {
        font-size: 4.75em;
    }

    .header .intro-text .skills {
        font-size: 1.75em;
    }
}

@media(min-width:768px) {
    .navbar-fixed-top {
        padding: 25px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-fixed-top .navbar-brand {
        font-size: 2em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-fixed-top.navbar-shrink {
        /*visibility: visible;*/
        padding: 10px 0;
    }

    .navbar-fixed-top.navbar-shrink .navbar-brand {
        font-size: 1.5em;
        /*visibility: visible;*/
    }
    .navbar-fixed-top.navbar-shrink .navbar-nav .navbar-right  {
        color: #332d2d;
        /*visibility: visible;*/
    }
}

.navbar {
    color: blue;
    text-transform: uppercase;
    /*display: none;*/
    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
    /*visibility: hidden;*/

}
.navbar-fixed-top .navbar-brand,.navbar-default .navbar-nav >li >a{
  color: #332d2d;
}
.navbar-default.navbar-nav>.active > a,.navbar-default.navbar-nav>.active > a:hover,.navbar-default.navbar-nav>.active > a {
  color: #332d2d;
  background-color: #112;
}

.navbar a:focus {
    outline: 0;
    background-color: #03a9f4;
}

.navbar .navbar-nav {
    letter-spacing: 1px;
    /*visibility: hidden;*/
}

.navbar .navbar-nav li a:focus {
    outline: 0;
    background-color: #fff;
}

.navbar-default,
.navbar-inverse {
    border: 0;
    background-color: #ededed;
}

section {
    padding: 100px 0;
}

section h2 {
    margin: 0;
    font-size: 3em;
}

section.success {
    color: #fff;
    background: #332d2d;
}

section.bluepokemon {
  color: #fff;
}

#register{
    background-image: url(../img/bgs/bg_dark.png)
}

@media(max-width:767px) {
    section {
        padding: 75px 0;
    }

    section.first {
        padding-top: 75px;
    }
}
#workshops .portfolio-item {
  right: 0;
  margin: 15px 0 15px;
}

#workshops .portfolio-item .portfolio-link {
  display: block;
  position: relative;
  margin: 0 auto;
  max-width: 400px;
}

#workshops .portfolio-item .portfolio-link .caption {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
  background: rgba(24,188,156,.9);
  -webkit-transition: all ease .5s;
  -moz-transition: all ease .5s;
  transition: all ease .5s;
}

#workshops .portfolio-item .portfolio-link .caption:hover {
  opacity: 1;
}

#workshops .portfolio-item .portfolio-link .caption .caption-content {
  position: absolute;
  top: 50%;
  width: 100%;
  height: 20px;
  margin-top: -12px;
  text-align: center;
  font-size: 20px;
  color: #fff;
}

#workshops .portfolio-item .portfolio-link .caption .caption-content i {
  margin-top: -12px;
}

#workshops .portfolio-item .portfolio-link .caption .caption-content h3,
#workshops .portfolio-item .portfolio-link .caption .caption-content h4 {
  margin: 0;
}

#workshops * {
  z-index: 2;
}

@media(min-width:767px) {
  #workshops .portfolio-item {
    margin: 15px 0 30px;
  }
}

#events .portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

#events .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#events .portfolio-item .portfolio-link .caption {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    background: rgba(24,188,156,.9);
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

#events .portfolio-item .portfolio-link .caption:hover {
    opacity: 1;
}

#events .portfolio-item .portfolio-link .caption .caption-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -12px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

#events .portfolio-item .portfolio-link .caption .caption-content i {
    margin-top: -12px;
}

#events .portfolio-item .portfolio-link .caption .caption-content h3,
#events .portfolio-item .portfolio-link .caption .caption-content h4 {
    margin: 0;
}

#events * {
    z-index: 2;
}

@media(min-width:767px) {
    #events .portfolio-item {
        margin: 0 0 30px;
    }
}

.btn-outline {
    margin-top: 15px;
    border: solid 2px #fff;
    font-size: 20px;
    color: #fff;
    background: 0 0;
    transition: all .3s ease-in-out;
}

.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
    border: solid 2px #fff;
    color: #03a9f4;
    background: #fff;
}

.floating-label-form-group {
    position: relative;
    margin-bottom: 0;
    padding-bottom: .5em;
    border-bottom: 1px solid #eee;
}

.floating-label-form-group input,
.floating-label-form-group textarea {
    z-index: 1;
    position: relative;
    padding-right: 0;
    padding-left: 0;
    border: 0;
    border-radius: 0;
    font-size: 1.5em;
    background: 0 0;
    box-shadow: none!important;
    resize: none;
}

.floating-label-form-group label {
    display: block;
    z-index: 0;
    position: relative;
    top: 2em;
    background: white;
    margin: 0;
    font-size: .85em;
    line-height: 1.764705882em;
    vertical-align: middle;
    vertical-align: baseline;
    opacity: 0;
    -webkit-transition: top .3s ease,opacity .3s ease;
    -moz-transition: top .3s ease,opacity .3s ease;
    -ms-transition: top .3s ease,opacity .3s ease;
    transition: top .3s ease,opacity .3s ease;
}

.floating-label-form-group::not(:first-child) {
    padding-left: 14px;
    border-left: 1px solid #eee;
}

.floating-label-form-group-with-value label {
    top: 0;
    opacity: 1;
}

.floating-label-form-group-with-focus label {
    color: #03a9f4;
}

form .row:first-child .floating-label-form-group {
    border-top: 1px solid #eee;
}

footer {
    color: #fff;
}

footer h3 {
    margin-bottom: 30px;
}

footer .footer-above {
    padding-top: 50px;
    background-color: #2c3e50;
}

footer .footer-col {
    margin-bottom: 50px;
}

footer .footer-below {
    padding: 25px 0;
    background-color: #233140;
}

.btn-social {
    display: inline-block;
    width: 50px;
    height: 50px;
    border: 2px solid #fff;
    border-radius: 100%;
    text-align: center;
    font-size: 20px;
    line-height: 45px;
}

.btn:focus,
.btn:active,
.btn.active {
    outline: 0;
}

.scroll-top {
    z-index: 1049;
    position: fixed;
    right: 2%;
    bottom: 2%;
    width: 50px;
    height: 50px;
}

.scroll-top .btn {
    width: 50px;
    height: 50px;
    border-radius: 100%;
    font-size: 20px;
    line-height: 28px;
}

.scroll-top .btn:focus {
    outline: 0;
}

.portfolio-modal .modal-content {


    text-align: center;
    
}

.portfolio-modal .modal-content h2 {
    margin: 0;
    font-size: 3em;
}

.portfolio-modal .modal-content img {
    margin-bottom: 30px;
}

.portfolio-modal .modal-content .item-details {
   
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 75px;
    height: 75px;
    background-color: transparent;
    cursor: pointer;
}

.portfolio-modal .close-modal:hover {
    opacity: .3;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 75px;
    background-color: #2c3e50;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 75px;
    background-color: #2c3e50;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}



#workshopmodal {
  margin: 20px auto;
  width: 100%;
}

#registertext{
  text-alignment: center;

}
#formbox {

  background: white;
}
#map{
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
}

#section-map{
    height: 400px;
    padding: 0;
    margin: 0;
    width: 100%;
}

.alert{
    background-color: #c90c0c;
    color: white;
}

#tagline{
    padding: 0;
    margin: 0;
    text-align: center;
}


@media(max-width: 728px){
    #tagline{
        font-size: 15px;
    }
}

.extrapad{
    padding:100px 0;
}

.checkbox{
    padding: 20px;
    font-size: 25px;
}

.checkbox .inputcheck{
    padding: 10px;
    font-size: 20px;
    line-height: 30px;
    vertical-align: middle;
}

